<resources>
    <string name="app_name">Musée des Ondes Emile Berliner</string>
    <string name="welcome_message">Welcome to the virtual guide for the Musée des Ondes Emile Berliner.</string>
    <string name="free_exploration">FREE EXPLORATION</string>
    <string name="free_exploration_description">Explore all of the exhbits in the museum in any order.</string>
    <string name="settings">Settings</string>
    <string name="language_title">Language</string>
    <string name="english_radio">English</string>
    <string name="french_radio">French</string>
    <string name="ok_button">OK</string>
    <string name="title_activity_map">Map</string>
    <string name="storyline_activity">TOURS</string>
    <string name="settings_activity">LANGUAGE</string>
    <string name="begin_tour_button_text">SELECT TOUR</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="start_storyline">Start</string>



    <string-array name="drawer_ele">
        <item>Tours</item>
        <item>Language</item>
        <item>Find exit</item>
    </string-array>

    <string name="dialogTitle">Welcome</string>
    <string name="dialogMsg">Are you sure? \n</string>
    <string name="dialogOk">OK</string>
    <string name="dialogCancel">Cancel</string>
    <string name="dialogFree">You will be able to freely explore any point of interests of the museum </string>

    <string name="endOfTourTitle">Tour Completed</string>
    <string name="endOfTourMsg">Do you wish to find the closest exit or will you start a new tour?</string>
    <string name="endOfTourOption1">Find Exit</string>
    <string name="endOfTourOption2">New Tour</string>

    <string name="tourTutorialTitle">Tour selection</string>
    <string name="tourTutorialMsg">Please select a tour by clicking on start</string>
</resources>
