<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.nspace.museedesondes.Settings">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:id="@+id/settings_title_box"
        android:gravity="end"
        android:background="@color/rca_primary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/settings_activity"
            android:layout_marginRight="10dp"
            android:textSize = "32sp"
            android:textColor = "#FFFFFF"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/settings_title_box"
        android:background="@color/rca_primary">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:id="@+id/language_radios"
        android:layout_alignBottom="@+id/ok_button"
        android:layout_centerHorizontal="true">


        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/french_radio"
            android:textSize="35dp"
            android:id="@+id/french_button"
            android:layout_above="@+id/english_button"
            android:layout_alignStart="@+id/english_button" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english_radio"
            android:textSize="35dp"
            android:id="@+id/english_button"
            android:layout_above="@+id/ok_button"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="88dp" />

    </RadioGroup>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_done_black_24dp"
            fab:fab_label="@string/ok_button"
            fab:fab_colorNormal="#FFFFFFFF"
            fab:fab_colorPressed="#FFFE7070"
            fab:fab_colorRipple="#FFFE7070"
            fab:menu_shadowColor="#444"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="161dp" />

    </RelativeLayout>

</RelativeLayout>
